@@ -370,6 +370,7 @@ inline bool U7exists(std::string fname) { return U7exists(fname.c_str()); }
 inline void perror(const char *errmsg) { return; }
 #define strdup myce_strdup
 char *myce_strdup(const char *s);
+
 #endif
 
 int U7mkdir(
