@@ -31,6 +31,7 @@ void ActionMenuGump(int* params);
 void ActionOldFileGump(int* params);
 #ifdef UNDER_CE
 void ActionMinimizeGame(int* params);
+void ActionTouchscreenMode(int* params);
 #endif
 
 void ActionScreenshot(int* params);
